--- a/src/components/CreateMessageArea/CreateMessageArea.scss
+++ b/src/components/CreateMessageArea/CreateMessageArea.scss
@@ -1,5 +1,12 @@
 .CreateMessageArea {
   min-height: 100px;
-  background: #eee;
+  background: #f5f5f5;
   border-top: 1px solid #ddd;
+
+  .CreateMessageArea__Content {
+    width: 100%;
+    max-width: 500px;
+    margin: auto;
+    padding: 40px;
+  }
 }
