--- a/src/components/CreateMessageArea/CreateMessageArea.scss
+++ b/src/components/CreateMessageArea/CreateMessageArea.scss
@@ -4,9 +4,8 @@
   border-top: 1px solid #ddd;
 
   .CreateMessageArea__Content {
-    width: 100%;
     max-width: 500px;
     margin: auto;
-    padding: 40px;
+    padding: 40px 80px;
   }
 }
