--- a/src/components/MessagesList/MessagesList.scss
+++ b/src/components/MessagesList/MessagesList.scss
@@ -1,3 +1,17 @@
 .MessagesList {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  overflow: hidden;
+  overflow-y: auto;
+  padding: 40px;
 
+  .MessagesList_NoMessages {
+    position: absolute;
+    bottom: 50%;
+    left: 50%;
+    color: #999;
+    transform: translate(-50%, -50%);
+  }
 }
