--- a/src/components/MessagesList/MessagesList.scss
+++ b/src/components/MessagesList/MessagesList.scss
@@ -1,17 +1,22 @@
 .MessagesList {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  overflow: hidden;
-  overflow-y: auto;
-  padding: 40px;
 
-  .MessagesList_NoMessages {
+  .MessagesList__Content {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    max-height: 100%;
+    padding: 40px;
+    overflow: hidden;
+    overflow-y: auto;
+  }
+
+  .MessagesList__NoMessages {
     position: absolute;
     bottom: 50%;
     left: 50%;
     color: #999;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
   }
 }
