--- a/src/components/MessagesList/MessagesList.scss
+++ b/src/components/MessagesList/MessagesList.scss
@@ -14,9 +14,10 @@
 
   .MessagesList__NoMessages {
     position: absolute;
-    bottom: 50%;
-    left: 50%;
+    bottom: 40px;
+    left: 0;
+    width: 100%;
     color: #999;
-    transform: translateX(-50%);
+    text-align: center;
   }
 }
