Fix MessagesList scroll to end logic

--- a/src/components/MessagesList/MessagesList.scss
+++ b/src/components/MessagesList/MessagesList.scss
@@ -1,7 +1,7 @@
 .MessagesList {
   position: relative;
 
-  .MessagesList__Content {
+  .MessagesList__Wrap {
     position: absolute;
     bottom: 0;
     left: 0;
